--- a/bisca-ui/package.json
+++ b/bisca-ui/package.json
@@ -1,5 +1,6 @@
 {
-  "name": "angular2-quickstart",
+  "name": "BiscaJE",
+  "description": "BiscaJE",
   "version": "1.0.0",
   "scripts": {
     "start": "tsc && concurrently \"npm run tsc:w\" \"npm run lite\" ",
@@ -15,15 +16,27 @@
   "dependencies": {
     "angular2": "2.0.0-beta.14",
     "systemjs": "0.19.25",
-    "es6-shim": "^0.35.0",
-    "reflect-metadata": "0.1.2",
     "rxjs": "5.0.0-beta.2",
-    "zone.js": "0.6.6"
+    "zone.js": "0.6.6",
+    "body-parser": "^1.15.0",
+    "compression": "^1.6.1",
+    "cors": "^2.7.1",
+    "es6-promise": "3.0.2",
+    "es6-shim": "0.33.13",
+    "express": "^4.13.4",
+    "ionic-framework": "2.0.0-beta.1",
+    "ionicons": "3.0.0-alpha.3",
+    "reflect-metadata": "0.1.2"
   },
   "devDependencies": {
     "concurrently": "^2.0.0",
     "lite-server": "^2.2.0",
     "typescript": "^1.8.9",
-    "typings":"^0.7.12"
+    "typings":"^0.7.12",
+    "babel-core": "6.5.2",
+    "babel-loader": "6.2.3",
+    "babel-plugin-transform-decorators-legacy": "1.3.4",
+    "babel-preset-es2015": "6.5.0",
+    "strip-sourcemap-loader": "0.0.1"
   }
 }
