SZ-N Creates first successfull REST calls to mock service

--- a/bisca-ui/.gitignore
+++ b/bisca-ui/.gitignore
@@ -3,6 +3,12 @@ typings/
 node_modules/
 app/*.js
 app/*.js.map
+app/models/*.js
+app/models/*.js.map
+app/services/*.js
+app/services/*.js.map
+
+
 
 # Log files
 **/*.log
