--- a/bisca-web/pom.xml
+++ b/bisca-web/pom.xml
@@ -13,6 +13,7 @@
         <maven.compiler>3.5.1</maven.compiler>
         <java.version>1.8</java.version>
         <jersey.core>1.19.1</jersey.core>
+        <jackson.core>2.7.3</jackson.core>
     </properties>
 
     <build>
@@ -41,6 +42,11 @@
             <groupId>com.sun.jersey</groupId>
             <artifactId>jersey-core</artifactId>
             <version>${jersey.core}</version>
+        </dependency>
+        <dependency>
+            <groupId>com.fasterxml.jackson.core</groupId>
+            <artifactId>jackson-core</artifactId>
+            <version>${jackson.core}</version>
         </dependency>
     </dependencies>
 
