--- a/bisca-web/pom.xml
+++ b/bisca-web/pom.xml
@@ -14,6 +14,7 @@
         <java.version>1.8</java.version>
         <jersey.core>1.19.1</jersey.core>
         <jackson.core>2.7.3</jackson.core>
+        <owasp.esapi>2.1.0.1</owasp.esapi>
     </properties>
 
     <build>
@@ -47,6 +48,11 @@
             <groupId>com.fasterxml.jackson.core</groupId>
             <artifactId>jackson-core</artifactId>
             <version>${jackson.core}</version>
+        </dependency>
+        <dependency>
+            <groupId>org.owasp.esapi</groupId>
+            <artifactId>esapi</artifactId>
+            <version>${owasp.esapi}</version>
         </dependency>
     </dependencies>
 
