--- a/bisca-web/pom.xml
+++ b/bisca-web/pom.xml
@@ -15,6 +15,8 @@
         <jersey.core>1.19.1</jersey.core>
         <jackson.core>2.7.3</jackson.core>
         <owasp.esapi>2.1.0.1</owasp.esapi>
+        <auth0>2.1.0</auth0>
+        <commons.codec>1.4</commons.codec>
     </properties>
 
     <build>
@@ -54,6 +56,15 @@
             <artifactId>esapi</artifactId>
             <version>${owasp.esapi}</version>
         </dependency>
+        <dependency>
+            <groupId>com.auth0</groupId>
+            <artifactId>java-jwt</artifactId>
+            <version>${auth0}</version>
+        </dependency>
+        <dependency>
+            <groupId>commons-codec</groupId>
+            <artifactId>commons-codec</artifactId>
+            <version>${commons.codec}</version>
+        </dependency>
     </dependencies>
-
 </project>
