--- a/bisca-ui/package.json
+++ b/bisca-ui/package.json
@@ -14,7 +14,10 @@
   },
   "license": "ISC",
   "dependencies": {
+    "typings": "0.7.12",
     "angular2": "2.0.0-beta.14",
+    "angular2-jwt": "0.1.9",
+    "jwt-decode": "^1.5.1",
     "systemjs": "0.19.25",
     "rxjs": "5.0.0-beta.2",
     "zone.js": "0.6.6",
