SZ-N Adds login project

--- a/bisca-ui/.gitignore
+++ b/bisca-ui/.gitignore
@@ -1,15 +1,2 @@
-# Angular JS 2 Startup
-typings/
-node_modules/
-app/*.js
-app/*.js.map
-app/models/*.js
-app/models/*.js.map
-app/services/*.js
-app/services/*.js.map
-
-
-
-# Log files
-**/*.log
-
+# Node modules
+node_modules
