--- a/bisca-ui/tsconfig.json
+++ b/bisca-ui/tsconfig.json
@@ -1,17 +1,26 @@
 {
   "compilerOptions": {
-    "target": "es5",
-    "module": "system",
-    "moduleResolution": "node",
-    "sourceMap": true,
+    "target": "ES5",
+    "module": "commonjs",
+    "removeComments": true,
     "emitDecoratorMetadata": true,
     "experimentalDecorators": true,
-    "removeComments": false,
-    "noImplicitAny": false
+    "sourceMap": true
   },
-  "exclude": [
-    "node_modules",
-    "typings/main",
-    "typings/main.d.ts"
-  ]
+  "files": [
+    "typings/tsd.d.ts",  
+    "src/app/app.ts",
+    "src/home/home.ts",
+    "src/login/login.ts",
+    "src/signup/signup.ts",
+    "src/index.ts",
+    "src/common/headers.ts"
+  ],
+    "filesGlob": [
+    "./src/**/*.ts",
+    "!./node_modules/**/*.ts"
+  ],
+  "compileOnSave": false,
+  "buildOnSave": false,
+  "atom": { "rewriteTsconfig": true }
 }
