--- a/bisca-ui/package.json
+++ b/bisca-ui/package.json
@@ -4,26 +4,23 @@
   "description": "This is a sample that shows how to add authentication to an Angular 2 (ng2) app",
   "main": "",
   "scripts": {
-    "front": "webpack-dev-server --inline -d --colors --display-error-details --display-cached --port 3000",
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "tsc && concurrently \"npm run tsc:w\" \"npm run lite\" ",
-    "tsc": "tsc",
-    "tsc:w": "tsc -w",
-    "lite": "lite-server",
-    "typings": "typings",
+    "start": "tsc && concurrently \"tsc -w\" \"lite-server\" ",
     "docker-build": "docker build -t ng2-quickstart .",
     "docker": "npm run docker-build && docker run -it --rm -p 3000:3000 -p 3001:3001 ng2-quickstart",
-    "postinstall": "typings install"
+    "e2e": "tsc && concurrently \"http-server\" \"protractor protractor.config.js\"",
+    "lite": "lite-server",
+    "postinstall": "typings install",
+    "test": "tsc && concurrently \"tsc -w\" \"karma start karma.conf.js\"",
+    "tsc": "tsc",
+    "tsc:w": "tsc -w",
+    "typings": "typings",
+    "webdriver:update": "webdriver-manager update",
+    "front": "webpack-dev-server --inline -d --colors --display-error-details --display-cached --port 3000"
   },
   "repository": {
     "type": "git",
     "url": "https://github.com/auth0/angular2-authentication-sample.git"
   },
-  "contributors": [
-    "Martin Gontovnikas (http://gon.to) <martin@gon.to>",
-    "PatrickJS <github@gdi2290.com>",
-    "Ryan Chenkie <ryanchenkie@gmail.com>"
-  ],
   "license": "MIT",
   "bugs": {
     "url": "https://github.com/auth0/angular2-authentication-sample/issues"
