SZ-N Restores webpack

--- a/bisca-ui/.gitignore
+++ b/bisca-ui/.gitignore
@@ -1,6 +1,18 @@
 # Angular JS 2 Startup
-**/*.js
-**/*.js.map
+typings/**/*.js
+typings/**/*.js.map
+signup/**/*.js
+signup/**/*.js.map
+login/**/*.js
+login/**/*.js.map
+home/**/*.js
+home/**/*.js.map
+common/**/*.js
+common/**/*.js.map
+app/**/*.js
+app/**/*.js.map
+index.js
+index.js.map
 
 # Node modules
 node_modules
