--- a/bisca-ui/tsconfig.json
+++ b/bisca-ui/tsconfig.json
@@ -1,11 +1,12 @@
 {
   "compilerOptions": {
     "target": "ES5",
-    "module": "commonjs",
+    "module": "system",
     "removeComments": true,
     "emitDecoratorMetadata": true,
     "experimentalDecorators": true,
-    "sourceMap": true
+    "sourceMap": true,
+    "moduleResolution" : "node"
   },
   "files": [
     "typings/tsd.d.ts",
@@ -13,6 +14,8 @@
     "app/main.ts",
     "app/game.ts",
     "app/app.game.ts",
+    "app/app.component.ts",
+    "app/app.constants.ts",
     "home/home.ts",
     "login/login.ts",
     "signup/signup.ts",
