SZ-N Creates first running REST API

--- a/bisca-rest-api/pom.xml
+++ b/bisca-rest-api/pom.xml
@@ -23,11 +23,17 @@
         <codehaus.jackson>1.9.13</codehaus.jackson>
         <jax.rs>2.0.1</jax.rs>
         <log4j>1.2.17</log4j>
+        <jetty.version>8.1.16.v20140903</jetty.version>
     </properties>
 
     <build>
         <finalName>bisca-rest-api</finalName>
         <plugins>
+            <plugin>
+                <groupId>org.mortbay.jetty</groupId>
+                <artifactId>jetty-maven-plugin</artifactId>
+                <version>${jetty.version}</version>
+            </plugin>
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-compiler-plugin</artifactId>
@@ -103,6 +109,21 @@
         <dependency>
             <groupId>com.sun.jersey</groupId>
             <artifactId>jersey-client</artifactId>
+            <version>${jersey.core}</version>
+        </dependency>
+        <dependency>
+            <groupId>com.sun.jersey</groupId>
+            <artifactId>jersey-server</artifactId>
+            <version>${jersey.core}</version>
+        </dependency>
+        <dependency>
+            <groupId>com.sun.jersey</groupId>
+            <artifactId>jersey-servlet</artifactId>
+            <version>${jersey.core}</version>
+        </dependency>
+        <dependency>
+            <groupId>com.sun.jersey</groupId>
+            <artifactId>jersey-json</artifactId>
             <version>${jersey.core}</version>
         </dependency>
 
