--- a/pom.xml
+++ b/pom.xml
@@ -11,7 +11,24 @@
     <modules>
         <module>bisca-api</module>
         <module>bisca-rest-api</module>
-        <module>bisca-web</module>
         <module>bisca-model</module>
     </modules>
+
+    <properties>
+        <maven.compiler>3.5.1</maven.compiler>
+        <java.version>1.8</java.version>
+    </properties>
+    <build>
+        <plugins>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-compiler-plugin</artifactId>
+                <version>${maven.compiler}</version>
+                <configuration>
+                    <source>${java.version}</source>
+                    <target>${java.version}</target>
+                </configuration>
+            </plugin>
+        </plugins>
+    </build>
 </project>
