--- a/bisca-model/pom.xml
+++ b/bisca-model/pom.xml
@@ -11,6 +11,8 @@
     <properties>
         <maven.compiler>3.5.1</maven.compiler>
         <java.version>1.8</java.version>
+        <project.lombok>1.16.8</project.lombok>
+        <junit>4.12</junit>
     </properties>
     <build>
         <plugins>
@@ -25,4 +27,19 @@
             </plugin>
         </plugins>
     </build>
+
+    <dependencies>
+        <dependency>
+            <groupId>org.projectlombok</groupId>
+            <artifactId>lombok</artifactId>
+            <version>${project.lombok}</version>
+        </dependency>
+        <!-- JUnit -->
+        <dependency>
+            <groupId>junit</groupId>
+            <artifactId>junit</artifactId>
+            <version>${junit}</version>
+            <scope>test</scope>
+        </dependency>
+    </dependencies>
 </project>
