--- a/bisca-rest-api/pom.xml
+++ b/bisca-rest-api/pom.xml
@@ -28,6 +28,7 @@
         <jboss.jbossts>4.16.6.Final</jboss.jbossts>
         <weld>2.3.3.Final</weld>
         <weld.servlet>2.3.2.Final</weld.servlet>
+        <project.lombok>1.16.8</project.lombok>
     </properties>
 
     <build>
@@ -194,5 +195,13 @@
             <artifactId>bisca-api</artifactId>
             <version>1.0-SNAPSHOT</version>
         </dependency>
+
+        <!-- Lombok -->
+        <dependency>
+            <groupId>org.projectlombok</groupId>
+            <artifactId>lombok</artifactId>
+            <version>${project.lombok}</version>
+        </dependency>
+
     </dependencies>
 </project>
