--- a/bisca-ui/package.json
+++ b/bisca-ui/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "angular2-authentication-sample",
+  "name": "bisca-ui",
   "version": "0.0.1",
-  "description": "This is a sample that shows how to add authentication to an Angular 2 (ng2) app",
+  "description": "This is the game BiscaJE",
   "main": "",
   "scripts": {
     "start": "tsc && concurrently \"tsc -w\" \"lite-server\"",
@@ -29,12 +29,11 @@
   "homepage": "https://github.com/jesperancinha/bisca-je",
   "dependencies": {
     "typings": "0.7.12",
-    "angular2": "2.0.0-beta.14",
-    "angular2-jwt": "0.1.9",
+    "angular2": "2.0.0-beta.17",
+    "angular2-jwt": "0.1.16",
     "jwt-decode": "^1.5.1",
     "systemjs": "0.19.26",
-    "rxjs": "5.0.0-beta.2",
-    "zone.js": "0.6.6",
+    "zone.js": "0.6.12",
     "body-parser": "^1.15.0",
     "compression": "^1.6.1",
     "cors": "^2.7.1",
@@ -45,7 +44,11 @@
     "bootstrap": "^3.3.6",
     "es6-promise": "^3.1.2",
     "es6-shim": "^0.35.0",
-    "es7-reflect-metadata": "^1.6.0"
+    "es7-reflect-metadata": "^1.6.0",
+    "@angular/core": "2.0.0-rc.1",
+    "@angular/http": "2.0.0-rc.1",
+    "rxjs": "5.0.0-beta.6",
+    "chokidar": "1.5.1"
   },
   "devDependencies": {
     "concurrently": "^2.0.0",
