--- a/bisca-rest-api/pom.xml
+++ b/bisca-rest-api/pom.xml
@@ -30,6 +30,7 @@
         <weld.servlet>2.3.2.Final</weld.servlet>
         <project.lombok>1.16.8</project.lombok>
         <cucumber.version>1.2.4</cucumber.version>
+        <activemq-all.version>5.13.3</activemq-all.version>
     </properties>
 
     <build>
@@ -196,12 +197,11 @@
             <version>${project.lombok}</version>
         </dependency>
 
-        <!-- JUnit -->
+        <!-- ActiveMQ -->
         <dependency>
-            <groupId>junit</groupId>
-            <artifactId>junit</artifactId>
-            <version>${junit}</version>
-            <scope>test</scope>
+            <groupId>org.apache.activemq</groupId>
+            <artifactId>activemq-all</artifactId>
+            <version>${activemq-all.version}</version>
         </dependency>
 
         <!-- TEST Libraries -->
@@ -216,6 +216,13 @@
             <groupId>info.cukes</groupId>
             <artifactId>cucumber-junit</artifactId>
             <version>${cucumber.version}</version>
+            <scope>test</scope>
+        </dependency>
+        <!-- JUnit -->
+        <dependency>
+            <groupId>junit</groupId>
+            <artifactId>junit</artifactId>
+            <version>${junit}</version>
             <scope>test</scope>
         </dependency>
 
