SZ-N Dependencies are now managed

--- a/.gitignore
+++ b/.gitignore
@@ -26,3 +26,4 @@ target
 # Rest API
 bisca-rest-api/com.steelzack.biscaje.entities.User
 bisca-rest-api/activemq-data/localhost/KahaDB/
+bisca-rest-api/duplicate
