--- a/bisca-api/pom.xml
+++ b/bisca-api/pom.xml
@@ -12,8 +12,10 @@
 
     <groupId>steelzack</groupId>
     <artifactId>bisca-api</artifactId>
-    <version>${parent.version}</version>
+    <version>${project.parent.version}</version>
     <properties>
+        <maven.compiler.source>1.8</maven.compiler.source>
+        <maven.compiler.target>1.8</maven.compiler.target>
         <maven.compiler>3.5.1</maven.compiler>
         <java.version>1.8</java.version>
     </properties>
