--- a/bisca-model/pom.xml
+++ b/bisca-model/pom.xml
@@ -12,9 +12,11 @@
 
     <groupId>steelzack</groupId>
     <artifactId>bisca-model</artifactId>
-    <version>${parent.version}</version>
+    <version>${project.parent.version}</version>
 
     <properties>
+        <maven.compiler.source>1.8</maven.compiler.source>
+        <maven.compiler.target>1.8</maven.compiler.target>
         <maven.compiler>3.5.1</maven.compiler>
         <java.version>1.8</java.version>
         <project.lombok>1.16.8</project.lombok>
