--- a/bisca-ui/package.json
+++ b/bisca-ui/package.json
@@ -28,51 +28,54 @@
   },
   "homepage": "https://github.com/jesperancinha/bisca-je",
   "dependencies": {
-    "typings": "0.7.12",
-    "angular2": "2.0.0-beta.17",
+    "@angular/core": "2.0.0-rc.1",
+    "@angular/http": "2.0.0-rc.1",
+    "angular2": "^2.0.0-beta.17",
     "angular2-jwt": "0.1.16",
-    "jwt-decode": "^1.5.1",
-    "systemjs": "0.19.26",
-    "zone.js": "0.6.12",
     "body-parser": "^1.15.0",
+    "bootstrap": "^3.3.6",
+    "chokidar": "1.5.1",
     "compression": "^1.6.1",
     "cors": "^2.7.1",
-    "express": "^4.13.4",
-    "ionic-framework": "2.0.0-beta.1",
-    "ionicons": "3.0.0-alpha.3",
-    "reflect-metadata": "0.1.2",
-    "bootstrap": "^3.3.6",
     "es6-promise": "^3.1.2",
     "es6-shim": "^0.35.0",
     "es7-reflect-metadata": "^1.6.0",
-    "@angular/core": "2.0.0-rc.1",
-    "@angular/http": "2.0.0-rc.1",
+    "express": "^4.13.4",
+    "ionic-framework": "2.0.0-beta.1",
+    "ionicons": "3.0.0-alpha.3",
+    "jwt-decode": "^1.5.1",
+    "ng2-toastr": "^0.3.1",
+    "reflect-metadata": "0.1.2",
     "rxjs": "5.0.0-beta.6",
-    "chokidar": "1.5.1"
+    "systemjs": "0.19.26",
+    "typings": "0.7.12",
+    "zone.js": "0.6.12"
   },
   "devDependencies": {
-    "concurrently": "^2.0.0",
-    "lite-server": "^2.2.0",
-    "typescript": "^1.8.9",
-    "typings":"^0.7.12",
     "babel-core": "6.5.2",
     "babel-loader": "6.2.3",
     "babel-plugin-transform-decorators-legacy": "1.3.4",
     "babel-preset-es2015": "6.5.0",
-    "strip-sourcemap-loader": "0.0.1",
+    "concurrently": "^2.0.0",
     "css-loader": "^0.23.1",
     "exports-loader": "^0.6.3",
     "expose-loader": "^0.7.1",
     "file-loader": "^0.8.5",
     "imports-loader": "^0.6.5",
     "json-loader": "^0.5.4",
+    "lite-server": "^2.2.0",
     "raw-loader": "^0.5.1",
+    "run-browser-lite": "^1.0.1",
+    "strip-sourcemap-loader": "0.0.1",
     "style-loader": "^0.13.0",
     "ts-loader": "^0.8.2",
     "tsconfig-lint": "^0.7.0",
+    "tsd": "^0.6.5",
     "tslint": "^3.5.0",
     "tslint-loader": "^2.1.3",
     "typedoc": "^0.3.12",
+    "typescript": "^1.8.9",
+    "typings": "^0.7.12",
     "url-loader": "^0.5.7",
     "webpack": "^1.12.14",
     "webpack-dev-server": "^1.14.1"
