--- a/bisca-ui/package.json
+++ b/bisca-ui/package.json
@@ -9,6 +9,7 @@
     "docker": "npm run docker-build && docker run -it --rm -p 3000:3000 -p 3001:3001 ng2-quickstart",
     "e2e": "tsc && concurrently \"http-server\" \"protractor protractor.config.js\"",
     "lite": "tsc && lite-server",
+    "all": "npm install && webpack install && tsc && lite-server",
     "notsclite": "lite-server",
     "postinstall": "typings install",
     "test": "tsc && concurrently \"tsc -w\" \"karma start karma.conf.js\"",
