--- a/bisca-ui/package.json
+++ b/bisca-ui/package.json
@@ -8,7 +8,7 @@
     "docker-build": "docker build -t ng2-quickstart .",
     "docker": "npm run docker-build && docker run -it --rm -p 3000:3000 -p 3001:3001 ng2-quickstart",
     "e2e": "tsc && concurrently \"http-server\" \"protractor protractor.config.js\"",
-    "lite": "tsc && lite-server",
+    "lite": "tsc && webpack install && lite-server",
     "all": "npm install && webpack install && tsc && lite-server",
     "notsclite": "lite-server",
     "postinstall": "typings install",
@@ -44,6 +44,7 @@
     "express": "^4.13.4",
     "ionic-framework": "2.0.0-beta.1",
     "ionicons": "3.0.0-alpha.3",
+    "jsonwebtoken": "^7.1.7",
     "jwt-decode": "^1.5.1",
     "ng2-toastr": "^0.3.1",
     "reflect-metadata": "0.1.2",
