--- a/pom.xml
+++ b/pom.xml
@@ -5,7 +5,7 @@
     <artifactId>bisca-je</artifactId>
     <packaging>pom</packaging>
     <version>1.0.0-SNAPSHOT</version>
-    <name>bisca-ui</name>
+    <name>bisca-je</name>
     <url>http://maven.apache.org</url>
 
     <modules>
@@ -278,7 +278,6 @@
 
         </dependencies>
     </dependencyManagement>
-
     <build>
         <plugins>
             <!-- Not a necessary plugin. In IntellJ you may need to use libs as an addition to the classpath during developing time -->
@@ -291,7 +290,7 @@
                             <goal>copy-dependencies</goal>
                         </goals>
                         <configuration>
-                            <outputDirectory>${basedir}/libs</outputDirectory>
+                            <outputDirectory>${basedir}/../libs</outputDirectory>
                             <overWriteReleases>false</overWriteReleases>
                             <overWriteSnapshots>false</overWriteSnapshots>
                             <overWriteIfNewer>true</overWriteIfNewer>
