--- a/pom.xml
+++ b/pom.xml
@@ -43,13 +43,14 @@
         <project.lombok>1.16.8</project.lombok>
         <cucumber.version>1.2.4</cucumber.version>
         <activemq-all.version>5.13.3</activemq-all.version>
-        <arquillian-bom.version>1.1.11.Final</arquillian-bom.version>
         <shrinkwrap-resolver-bom.version>2.2.2</shrinkwrap-resolver-bom.version>
         <shrinkwrap-api.version>1.2.6</shrinkwrap-api.version>
         <arquillian-weld-ee-embedded-1.1.version>1.1.2.Final</arquillian-weld-ee-embedded-1.1.version>
         <javaee-api.version>7.0</javaee-api.version>
         <javax.ejb-api.version>3.2</javax.ejb-api.version>
         <activemq-client.version>5.13.0</activemq-client.version>
+        <arquillian-container-test-api.version>1.1.7.Final</arquillian-container-test-api.version>
+        <shrinkwrap-api.version>1.2.6</shrinkwrap-api.version>
     </properties>
 
     <dependencyManagement>
@@ -254,28 +255,36 @@
             </dependency>
 
             <!-- Arquillian -->
-            <!-- https://mvnrepository.com/artifact/org.jboss.arquillian/arquillian-bom -->
-            <!--<dependency>-->
-            <!--<groupId>org.jboss.arquillian.junit</groupId>-->
-            <!--<artifactId>arquillian-junit-container</artifactId>-->
-            <!--<version>${arquillian-bom.version}</version>-->
-            <!--<scope>test</scope>-->
-            <!--</dependency>-->
-
-            <!-- https://mvnrepository.com/artifact/org.jboss.arquillian.container/arquillian-weld-se-embedded-1.1 -->
-            <!--<dependency>-->
-            <!--<groupId>org.jboss.arquillian.container</groupId>-->
-            <!--<artifactId>arquillian-weld-se-embedded-1.1</artifactId>-->
-            <!--<version>1.0.0.CR9</version>-->
-            <!--</dependency>-->
-
-            <!--<dependency>-->
-            <!--<groupId>org.jboss.weld</groupId>-->
-            <!--<artifactId>weld-core</artifactId>-->
-            <!--<version>1.1.5.Final</version>-->
-            <!--<scope>test</scope>-->
-            <!--</dependency>-->
-
+            <dependency>
+                <groupId>org.jboss.arquillian.container</groupId>
+                <artifactId>arquillian-container-test-api</artifactId>
+                <version>${arquillian-container-test-api.version}</version>
+                <scope>test</scope>
+            </dependency>
+            <dependency>
+                <groupId>org.jboss.arquillian.junit</groupId>
+                <artifactId>arquillian-junit-core</artifactId>
+                <version>${arquillian-container-test-api.version}</version>
+                <scope>test</scope>
+            </dependency>
+            <dependency>
+                <groupId>org.jboss.arquillian.core</groupId>
+                <artifactId>arquillian-core-impl-base</artifactId>
+                <version>${arquillian-container-test-api.version}</version>
+                <scope>test</scope>
+            </dependency>
+            <dependency>
+                <groupId>org.jboss.shrinkwrap</groupId>
+                <artifactId>shrinkwrap-api</artifactId>
+                <version>${shrinkwrap-api.version}</version>
+                <scope>test</scope>
+            </dependency>
+            <dependency>
+                <groupId>org.jboss.arquillian.test</groupId>
+                <artifactId>arquillian-test-impl-base</artifactId>
+                <version>${arquillian-container-test-api.version}</version>
+                <scope>test</scope>
+            </dependency>
         </dependencies>
     </dependencyManagement>
     <build>
@@ -301,4 +310,5 @@
             </plugin>
         </plugins>
     </build>
+
 </project>
