SZ-N Fixes paths

--- a/bisca-ui/package.json
+++ b/bisca-ui/package.json
@@ -4,7 +4,7 @@
   "description": "This is the game BiscaJE",
   "main": "",
   "scripts": {
-    "start": "tsc && concurrently \"tsc -w\" \"lite-server\"",
+    "start": "npm install && webpack install && tsc && concurrently \"tsc -w\" \"lite-server\"",
     "docker-build": "docker build -t ng2-quickstart .",
     "docker": "npm run docker-build && docker run -it --rm -p 3000:3000 -p 3001:3001 ng2-quickstart",
     "e2e": "tsc && concurrently \"http-server\" \"protractor protractor.config.js\"",
@@ -49,6 +49,7 @@
     "ng2-toastr": "^0.3.1",
     "reflect-metadata": "0.1.2",
     "rxjs": "5.0.0-beta.6",
+    "sockjs": "^0.3.17",
     "systemjs": "0.19.26",
     "typings": "0.7.12",
     "zone.js": "0.6.12"
