--- a/bisca-ui/tsconfig.json
+++ b/bisca-ui/tsconfig.json
@@ -9,21 +9,23 @@
     "moduleResolution" : "node"
   },
   "files": [
-    "typings/tsd.d.ts",
-    "app/app.ts",
-    "app/main.ts",
-    "app/game.ts",
-    "app/app.game.ts",
-    "app/app.component.ts",
-    "app/services/app.constants.ts",
-    "home/home.ts",
-    "login/login.ts",
-    "signup/signup.ts",
     "index.ts",
-    "common/headers.ts",
-    "app/models/player.board.ts",
-    "app/models/player.status.ts",
-    "app/services/player.service.ts"
+    "gameplay.ts",
+    "typings/tsd.d.ts",
+    "app/game.ts",
+    "app/main.ts",
+    "app/common/headers.ts",
+    "app/game/app.game.ts",
+    "app/game/player.board.ts",
+    "app/game/player.status.ts",
+    "app/home/app.component.ts",
+    "app/home/home.ts",
+    "app/login/app.ts",
+    "app/login/login.ts",
+    "app/routing/logged.in.outlet.ts",
+    "app/services/app.constants.ts",
+    "app/services/player.service.ts",
+    "app/signup/signup.ts"
   ],
     "filesGlob": [
     "./**/*.ts",
