--- a/bisca-ui/package.json
+++ b/bisca-ui/package.json
@@ -29,6 +29,7 @@
   },
   "homepage": "https://github.com/jesperancinha/bisca-je",
   "dependencies": {
+    "@angular/common": "^2.0.0-rc.5",
     "@angular/core": "2.0.0-rc.1",
     "@angular/http": "2.0.0-rc.1",
     "@angular2-material/button": "^2.0.0-alpha.7-2",
