--- a/bisca-ui/package.json
+++ b/bisca-ui/package.json
@@ -35,11 +35,13 @@
     "@angular/forms": "^0.3.0",
     "@angular/http": "2.0.0-rc.5",
     "@angular/platform-browser": "^2.0.0-rc.5",
+    "@angular/platform-browser-dynamic": "^2.0.0-rc.5",
+    "@angular/router": "^3.0.0-rc.1",
+    "@angular/router-deprecated": "^2.0.0-rc.2",
     "@angular2-material/button": "^2.0.0-alpha.7",
     "@angular2-material/core": "^2.0.0-alpha.7",
     "@angular2-material/icon": "^2.0.0-alpha.7",
     "@angular2-material/input": "^2.0.0-alpha.7",
-    "angular2": "^2.0.0-beta.17",
     "angular2-jwt": "0.1.16",
     "body-parser": "^1.15.0",
     "chokidar": "1.5.1",
