--- a/bisca-ui/package.json
+++ b/bisca-ui/package.json
@@ -37,7 +37,6 @@
     "@angular/platform-browser": "^2.0.0-rc.5",
     "@angular/platform-browser-dynamic": "^2.0.0-rc.5",
     "@angular/router": "^3.0.0-rc.1",
-    "@angular/router-deprecated": "^2.0.0-rc.2",
     "@angular2-material/button": "^2.0.0-alpha.7",
     "@angular2-material/core": "^2.0.0-alpha.7",
     "@angular2-material/icon": "^2.0.0-alpha.7",
@@ -51,12 +50,10 @@
     "es6-shim": "^0.35.0",
     "es7-reflect-metadata": "^1.6.0",
     "express": "^4.13.4",
-    "ionic-framework": "2.0.0-beta.1",
-    "ionicons": "3.0.0-alpha.3",
     "jsonwebtoken": "^7.1.7",
     "jwt-decode": "^1.5.1",
     "ng-annotations": "^1.1.0",
-    "ng2-toastr": "^0.3.1",
+    "ng2-material": "^0.6.1",
     "reflect-metadata": "0.1.2",
     "ripple-js": "^1.4.1",
     "rxjs": "5.0.0-beta.6",
