--- a/bisca-ui/tsconfig.json
+++ b/bisca-ui/tsconfig.json
@@ -11,8 +11,8 @@
   "files": [
     "index.ts",
     "typings/tsd.d.ts",
-    "app/game.ts",
     "app/main.ts",
+    "app/app.module.ts",
     "app/common/headers.ts",
     "app/game/app.game.ts",
     "app/game/player.board.ts",
@@ -21,6 +21,7 @@
     "app/home/home.ts",
     "app/login/app.ts",
     "app/login/login.ts",
+    "app/login/app.routes.ts",
     "app/routing/logged.in.outlet.ts",
     "app/services/app.constants.ts",
     "app/services/player.service.ts",
