--- a/bisca-ui/package.json
+++ b/bisca-ui/package.json
@@ -8,7 +8,7 @@
     "docker-build": "docker build -t ng2-quickstart .",
     "docker": "npm run docker-build && docker run -it --rm -p 3000:3000 -p 3001:3001 ng2-quickstart",
     "e2e": "tsc && concurrently \"http-server\" \"protractor protractor.config.js\"",
-    "lite": "tsc && webpack install && lite-server",
+    "lite": "lite-server",
     "all": "npm install && webpack install && tsc && lite-server",
     "notsclite": "lite-server",
     "postinstall": "typings install",
@@ -41,7 +41,6 @@
     "@angular2-material/core": "^2.0.0-alpha.7",
     "@angular2-material/icon": "^2.0.0-alpha.7",
     "@angular2-material/input": "^2.0.0-alpha.7",
-    "angular2-jwt": "0.1.16",
     "body-parser": "^1.15.0",
     "chokidar": "1.5.1",
     "compression": "^1.6.1",
