--- a/bisca-ui/package.json
+++ b/bisca-ui/package.json
@@ -29,37 +29,37 @@
   },
   "homepage": "https://github.com/jesperancinha/bisca-je",
   "dependencies": {
-    "@angular/common": "^2.0.0-rc.5",
-    "@angular/compiler": "^2.0.0-rc.5",
-    "@angular/core": "^2.0.0-rc.5",
+    "@angular/common": "^2.4.6",
+    "@angular/compiler": "^2.4.6",
+    "@angular/core": "^2.4.6",
     "@angular/forms": "^0.3.0",
-    "@angular/http": "2.0.0-rc.5",
-    "@angular/platform-browser": "^2.0.0-rc.5",
-    "@angular/platform-browser-dynamic": "^2.0.0-rc.5",
-    "@angular/router": "^3.0.0-rc.1",
-    "@angular2-material/button": "^2.0.0-alpha.7",
-    "@angular2-material/core": "^2.0.0-alpha.7",
-    "@angular2-material/icon": "^2.0.0-alpha.7",
-    "@angular2-material/input": "^2.0.0-alpha.7",
-    "body-parser": "^1.15.0",
-    "chokidar": "1.5.1",
-    "compression": "^1.6.1",
-    "cors": "^2.7.1",
-    "es6-promise": "^3.1.2",
-    "es6-shim": "^0.35.0",
+    "@angular/http": "^2.0.0-rc.5",
+    "@angular/platform-browser": "^2.4.6",
+    "@angular/platform-browser-dynamic": "^2.4.6",
+    "@angular/router": "^3.4.6",
+    "@angular2-material/button": "^2.0.0-alpha.8-experimental3",
+    "@angular2-material/core": "^2.0.0-alpha.8-experimental3",
+    "@angular2-material/icon": "^2.0.0-alpha.8-experimental3",
+    "@angular2-material/input": "^2.0.0-alpha.8-experimental3",
+    "body-parser": "^1.16.0",
+    "chokidar": "^1.5.1",
+    "compression": "^1.6.2",
+    "cors": "^2.8.1",
+    "es6-promise": "^3.3.1",
+    "es6-shim": "^0.35.3",
     "es7-reflect-metadata": "^1.6.0",
-    "express": "^4.13.4",
-    "jsonwebtoken": "^7.1.7",
+    "express": "^4.14.1",
+    "jsonwebtoken": "^7.2.1",
     "jwt-decode": "^1.5.1",
     "ng-annotations": "^1.1.0",
     "ng2-material": "^0.6.1",
-    "reflect-metadata": "0.1.2",
-    "ripple-js": "^1.4.1",
-    "rxjs": "5.0.0-beta.6",
-    "sockjs": "^0.3.17",
-    "systemjs": "0.19.26",
-    "typings": "0.7.12",
-    "zone.js": "0.6.12"
+    "reflect-metadata": "^0.1.2",
+    "ripple-js": "^1.4.4",
+    "rxjs": "^5.0.0-beta.6",
+    "sockjs": "^0.3.18",
+    "systemjs": "^0.19.26",
+    "typings": "^0.7.12",
+    "zone.js": "^0.6.12"
   },
   "devDependencies": {
     "babel-core": "6.5.2",
