--- a/bisca-ui/package.json
+++ b/bisca-ui/package.json
@@ -1,93 +1,46 @@
 {
   "name": "bisca-ui",
-  "version": "0.0.1",
-  "description": "This is the game BiscaJE",
-  "main": "",
-  "scripts": {
-    "start": "npm install && webpack install && tsc && concurrently \"tsc -w\" \"lite-server\"",
-    "docker-build": "docker build -t ng2-quickstart .",
-    "docker": "npm run docker-build && docker run -it --rm -p 3000:3000 -p 3001:3001 ng2-quickstart",
-    "e2e": "tsc && concurrently \"http-server\" \"protractor protractor.config.js\"",
-    "lite": "lite-server",
-    "all": "npm install && webpack install && tsc && lite-server",
-    "notsclite": "lite-server",
-    "postinstall": "typings install",
-    "test": "tsc && concurrently \"tsc -w\" \"karma start karma.conf.js\"",
-    "tsc": "tsc",
-    "tsc:w": "tsc -w",
-    "typings": "typings",
-    "webdriver:update": "webdriver-manager update",
-    "front": "webpack-dev-server --inline -d --colors --display-error-details --display-cached --port 3000"
-  },
-  "repository": {
-    "type": "git",
-    "url": "https://github.com/jesperancinha/bisca-je.git"
-  },
+  "version": "0.0.0",
   "license": "MIT",
-  "bugs": {
-    "url": "https://github.com/auth0/angular2-authentication-sample/issues"
+  "angular-cli": {},
+  "scripts": {
+    "ng": "ng",
+    "start": "ng serve",
+    "test": "ng test",
+    "pree2e": "webdriver-manager update --standalone false --gecko false",
+    "e2e": "protractor"
   },
-  "homepage": "https://github.com/jesperancinha/bisca-je",
+  "private": true,
   "dependencies": {
-    "@angular/common": "^2.4.6",
-    "@angular/compiler": "^2.4.6",
-    "@angular/core": "^2.4.6",
-    "@angular/forms": "^0.3.0",
-    "@angular/http": "^2.0.0-rc.5",
-    "@angular/platform-browser": "^2.4.6",
-    "@angular/platform-browser-dynamic": "^2.4.6",
-    "@angular/router": "^3.4.6",
-    "@angular2-material/button": "^2.0.0-alpha.8-experimental3",
-    "@angular2-material/core": "^2.0.0-alpha.8-experimental3",
-    "@angular2-material/icon": "^2.0.0-alpha.8-experimental3",
-    "@angular2-material/input": "^2.0.0-alpha.8-experimental3",
-    "body-parser": "^1.16.0",
-    "chokidar": "^1.5.1",
-    "compression": "^1.6.2",
-    "cors": "^2.8.1",
-    "es6-promise": "^3.3.1",
-    "es6-shim": "^0.35.3",
-    "es7-reflect-metadata": "^1.6.0",
-    "express": "^4.14.1",
-    "jsonwebtoken": "^7.2.1",
-    "jwt-decode": "^1.5.1",
-    "ng-annotations": "^1.1.0",
-    "ng2-material": "^0.6.1",
-    "reflect-metadata": "^0.1.2",
-    "ripple-js": "^1.4.4",
-    "rxjs": "^5.0.0-beta.6",
-    "sockjs": "^0.3.18",
-    "systemjs": "^0.19.26",
-    "typings": "^0.7.12",
-    "zone.js": "^0.6.12"
+    "@angular/common": "^2.3.1",
+    "@angular/compiler": "^2.3.1",
+    "@angular/core": "^2.3.1",
+    "@angular/forms": "^2.3.1",
+    "@angular/http": "^2.3.1",
+    "@angular/platform-browser": "^2.3.1",
+    "@angular/platform-browser-dynamic": "^2.3.1",
+    "@angular/router": "^3.3.1",
+    "core-js": "^2.4.1",
+    "rxjs": "^5.0.1",
+    "ts-helpers": "^1.1.1",
+    "zone.js": "^0.7.2"
   },
   "devDependencies": {
-    "babel-core": "6.5.2",
-    "babel-loader": "6.2.3",
-    "babel-plugin-transform-decorators-legacy": "1.3.4",
-    "babel-preset-es2015": "6.5.0",
-    "concurrently": "^2.0.0",
-    "css-loader": "^0.23.1",
-    "exports-loader": "^0.6.3",
-    "expose-loader": "^0.7.1",
-    "file-loader": "^0.8.5",
-    "imports-loader": "^0.6.5",
-    "json-loader": "^0.5.4",
-    "lite-server": "^2.2.0",
-    "raw-loader": "^0.5.1",
-    "run-browser-lite": "^1.0.1",
-    "strip-sourcemap-loader": "0.0.1",
-    "style-loader": "^0.13.0",
-    "ts-loader": "^0.8.2",
-    "tsconfig-lint": "^0.7.0",
-    "tsd": "^0.6.5",
-    "tslint": "^3.5.0",
-    "tslint-loader": "^2.1.3",
-    "typedoc": "^0.3.12",
-    "typescript": "^1.8.9",
-    "typings": "^0.7.12",
-    "url-loader": "^0.5.7",
-    "webpack": "^1.12.14",
-    "webpack-dev-server": "^1.14.1"
+    "@angular/compiler-cli": "^2.3.1",
+    "@types/jasmine": "2.5.38",
+    "@types/node": "^6.0.42",
+    "angular-cli": "1.0.0-beta.28.3",
+    "codelyzer": "~2.0.0-beta.1",
+    "jasmine-core": "2.5.2",
+    "jasmine-spec-reporter": "2.5.0",
+    "karma": "1.2.0",
+    "karma-chrome-launcher": "^2.0.0",
+    "karma-cli": "^1.0.1",
+    "karma-jasmine": "^1.0.2",
+    "karma-remap-istanbul": "^0.2.1",
+    "protractor": "~4.0.13",
+    "ts-node": "1.2.1",
+    "tslint": "^4.3.0",
+    "typescript": "~2.0.3"
   }
 }
