--- a/bisca-ui/package.json
+++ b/bisca-ui/package.json
@@ -27,6 +27,7 @@
     "@angular/router": "^3.4.6",
     "core-js": "^2.4.1",
     "reflect-metadata": "^0.1.9",
+    "requirejs": "^2.3.2",
     "rxjs": "^5.1.0",
     "systemjs": "^0.20.5",
     "ts-helpers": "^1.1.1",
