--- a/bisca-ui/tsconfig.json
+++ b/bisca-ui/tsconfig.json
@@ -7,9 +7,7 @@
     "emitDecoratorMetadata": true,
     "experimentalDecorators": true,
     "removeComments": false,
-    "noImplicitAny": false,
-    "outDir": "dist/out-tsc",
-    "mapRoot": "./"
+    "noImplicitAny": false
   },
   "include": [
       "src/**/*"
