--- a/bisca-rest-api/pom.xml
+++ b/bisca-rest-api/pom.xml
@@ -3,7 +3,7 @@
     <modelVersion>4.0.0</modelVersion>
 
     <parent>
-        <groupId>jofisaes</groupId>
+       <groupId>jesperancinha</groupId>
         <artifactId>bisca-je</artifactId>
         <version>1.0.0</version>
     </parent>
@@ -11,14 +11,12 @@
     <artifactId>bisca-rest-api</artifactId>
     <packaging>war</packaging>
     <name>bisca-rest-api</name>
-    <version>${project.parent.version}</version>
     <url>http://maven.apache.org</url>
 
     <properties>
         <maven.compiler.source>1.8</maven.compiler.source>
         <maven.compiler.target>1.8</maven.compiler.target>
         <jetty.version>8.1.16.v20140903</jetty.version>
-        <java.version>1.8</java.version>
         <maven.compiler>3.5.1</maven.compiler>
         <arquillian-glassfish-embedded-3.1.version>1.0.0.CR3</arquillian-glassfish-embedded-3.1.version>
         <glassfish-embedded-all.version>3.1.2</glassfish-embedded-all.version>
@@ -124,7 +122,7 @@
 
         <!-- BiscaJE -->
         <dependency>
-            <groupId>steelzack</groupId>
+            <groupId>jesperancinha</groupId>
             <artifactId>bisca-model</artifactId>
         </dependency>
 
@@ -160,7 +158,7 @@
         </dependency>
 
         <dependency>
-            <groupId>steelzack</groupId>
+            <groupId>jesperancinha</groupId>
             <artifactId>bisca-api</artifactId>
         </dependency>
 
@@ -246,7 +244,7 @@
             <groupId>org.jboss.arquillian</groupId>
             <artifactId>arquillian-bom</artifactId>
             <version>1.1.7.Final</version>
-            <scope>import</scope>
+            <scope>provided</scope>
             <type>pom</type>
         </dependency>
 
