--- a/pom.xml
+++ b/pom.xml
@@ -3,7 +3,7 @@
     <modelVersion>4.0.0</modelVersion>
     <packaging>pom</packaging>
 
-    <groupId>jofiaes</groupId>
+    <groupId>jesperancinha</groupId>
     <artifactId>bisca-je</artifactId>
     <version>1.0.0</version>
 
@@ -17,10 +17,10 @@
     </modules>
 
     <properties>
-        <maven.compiler.source>10</maven.compiler.source>
-        <maven.compiler.target>10</maven.compiler.target>
+        <maven.compiler.source>11</maven.compiler.source>
+        <maven.compiler.target>11</maven.compiler.target>
         <maven.compiler>3.5.1</maven.compiler>
-        <java.version>1.8</java.version>
+        <java.version>11</java.version>
         <junit>4.12</junit>
         <jersey-bundle.version>1.19.1</jersey-bundle.version>
         <jersey-server.version>2.23</jersey-server.version>
@@ -42,7 +42,7 @@
         <jboss.jbossts>4.16.6.Final</jboss.jbossts>
         <weld>2.3.3.Final</weld>
         <weld.servlet>2.3.2.Final</weld.servlet>
-        <project.lombok>1.16.8</project.lombok>
+        <project.lombok>1.18.4</project.lombok>
         <cucumber.version>1.2.4</cucumber.version>
         <activemq-all.version>5.13.3</activemq-all.version>
         <shrinkwrap-resolver-bom.version>2.2.2</shrinkwrap-resolver-bom.version>
@@ -50,7 +50,7 @@
         <arquillian-weld-ee-embedded-1.1.version>1.1.2.Final</arquillian-weld-ee-embedded-1.1.version>
         <javaee-api.version>7.0</javaee-api.version>
         <javax.ejb-api.version>3.2</javax.ejb-api.version>
-        <activemq-client.version>5.13.0</activemq-client.version>
+        <activemq-client.version>5.15.7</activemq-client.version>
         <arquillian-container-test-api.version>1.1.7.Final</arquillian-container-test-api.version>
         <shrinkwrap-api.version>1.2.6</shrinkwrap-api.version>
     </properties>
@@ -59,13 +59,13 @@
         <dependencies>
             <!-- bisca model -->
             <dependency>
-                <groupId>steelzack</groupId>
+                <groupId>jesperancinha</groupId>
                 <artifactId>bisca-model</artifactId>
                 <version>${project.version}</version>
             </dependency>
             <!-- bisca api -->
             <dependency>
-                <groupId>steelzack</groupId>
+                <groupId>jesperancinha</groupId>
                 <artifactId>bisca-api</artifactId>
                 <version>${project.version}</version>
             </dependency>
