JE-00001 dependency management

--- a/pom.xml
+++ b/pom.xml
@@ -69,6 +69,12 @@
                 <artifactId>bisca-api</artifactId>
                 <version>${project.version}</version>
             </dependency>
+            <!-- bisca rest -->
+            <dependency>
+                <groupId>jesperancinha</groupId>
+                <artifactId>bisca-rest-api-test</artifactId>
+                <version>${project.version}</version>
+            </dependency>
 
             <!-- Javax Persistence -->
             <dependency>
