--- a/bisca-model/pom.xml
+++ b/bisca-model/pom.xml
@@ -10,6 +10,8 @@
         <version>1.0.0</version>
     </parent>
 
+    <packaging>jar</packaging>
+
     <artifactId>bisca-model</artifactId>
 
     <properties>
