JE-BJE-00001 Removes Front End Modules - Some static variables renaming - Lamdas refactoring - Introduction of Google Truth - Introduction of Jupiter

--- a/bisca-model/pom.xml
+++ b/bisca-model/pom.xml
@@ -46,10 +46,17 @@
             <artifactId>lombok</artifactId>
         </dependency>
 
-        <!-- JUnit -->
+        <!-- https://mvnrepository.com/artifact/org.junit.jupiter/junit-jupiter-api -->
         <dependency>
-            <groupId>junit</groupId>
-            <artifactId>junit</artifactId>
+            <groupId>org.junit.jupiter</groupId>
+            <artifactId>junit-jupiter-api</artifactId>
+            <scope>test</scope>
+        </dependency>
+
+        <!-- https://mvnrepository.com/artifact/com.google.truth/truth -->
+        <dependency>
+            <groupId>com.google.truth</groupId>
+            <artifactId>truth</artifactId>
             <scope>test</scope>
         </dependency>
     </dependencies>
