--- a/pom.xml
+++ b/pom.xml
@@ -20,10 +20,8 @@
         <maven.compiler.source>1.8</maven.compiler.source>
         <maven.compiler.target>1.8</maven.compiler.target>
         <maven.compiler>3.5.1</maven.compiler>
-        <junit>4.12</junit>
         <jersey-bundle.version>1.19.1</jersey-bundle.version>
         <jersey-server.version>2.23</jersey-server.version>
-        <junit>4.12</junit>
         <maven.compiler>3.5.1</maven.compiler>
         <java.version>1.8</java.version>
         <jackson.core>2.7.3</jackson.core>
@@ -52,6 +50,8 @@
         <activemq-client.version>5.15.7</activemq-client.version>
         <arquillian-container-test-api.version>1.1.7.Final</arquillian-container-test-api.version>
         <shrinkwrap-api.version>1.2.6</shrinkwrap-api.version>
+        <junit-jupiter-api.version>5.3.2</junit-jupiter-api.version>
+        <truth.version>0.42</truth.version>
     </properties>
 
     <dependencyManagement>
@@ -184,6 +184,7 @@
                 <artifactId>weld-core</artifactId>
                 <version>${weld}</version>
             </dependency>
+
             <dependency>
                 <groupId>org.jboss.weld.servlet</groupId>
                 <artifactId>weld-servlet-core</artifactId>
@@ -223,21 +224,11 @@
                 <groupId>info.cukes</groupId>
                 <artifactId>cucumber-java</artifactId>
                 <version>${cucumber.version}</version>
-                <scope>test</scope>
             </dependency>
             <dependency>
                 <groupId>info.cukes</groupId>
                 <artifactId>cucumber-junit</artifactId>
                 <version>${cucumber.version}</version>
-                <scope>test</scope>
-            </dependency>
-
-            <!-- JUnit -->
-            <dependency>
-                <groupId>junit</groupId>
-                <artifactId>junit</artifactId>
-                <version>${junit}</version>
-                <scope>test</scope>
             </dependency>
 
             <!-- ActiveMQ-->
@@ -251,14 +242,12 @@
                 <groupId>org.apache.activemq.tooling</groupId>
                 <artifactId>activemq-junit</artifactId>
                 <version>${activemq-all.version}</version>
-                <scope>test</scope>
             </dependency>
 
             <dependency>
                 <groupId>org.apache.activemq</groupId>
                 <artifactId>activemq-broker</artifactId>
                 <version>${activemq-all.version}</version>
-                <scope>test</scope>
             </dependency>
 
             <!-- Arquillian -->
@@ -266,31 +255,42 @@
                 <groupId>org.jboss.arquillian.container</groupId>
                 <artifactId>arquillian-container-test-api</artifactId>
                 <version>${arquillian-container-test-api.version}</version>
-                <scope>test</scope>
             </dependency>
+
             <dependency>
                 <groupId>org.jboss.arquillian.junit</groupId>
                 <artifactId>arquillian-junit-core</artifactId>
                 <version>${arquillian-container-test-api.version}</version>
-                <scope>test</scope>
             </dependency>
+
             <dependency>
                 <groupId>org.jboss.arquillian.core</groupId>
                 <artifactId>arquillian-core-impl-base</artifactId>
                 <version>${arquillian-container-test-api.version}</version>
-                <scope>test</scope>
             </dependency>
             <dependency>
                 <groupId>org.jboss.shrinkwrap</groupId>
                 <artifactId>shrinkwrap-api</artifactId>
                 <version>${shrinkwrap-api.version}</version>
-                <scope>test</scope>
             </dependency>
             <dependency>
                 <groupId>org.jboss.arquillian.test</groupId>
                 <artifactId>arquillian-test-impl-base</artifactId>
                 <version>${arquillian-container-test-api.version}</version>
-                <scope>test</scope>
+            </dependency>
+
+            <!-- https://mvnrepository.com/artifact/org.junit.jupiter/junit-jupiter-api -->
+            <dependency>
+                <groupId>org.junit.jupiter</groupId>
+                <artifactId>junit-jupiter-api</artifactId>
+                <version>${junit-jupiter-api.version}</version>
+            </dependency>
+
+            <!-- https://mvnrepository.com/artifact/com.google.truth/truth -->
+            <dependency>
+                <groupId>com.google.truth</groupId>
+                <artifactId>truth</artifactId>
+                <version>${truth.version}</version>
             </dependency>
         </dependencies>
     </dependencyManagement>
